Unify live game websocket flow
